--- a/blog.html
+++ b/blog.html
@@ -9,8 +9,9 @@
 
 <body>
     <h1>Blog do site</h1>
-    <p>artigo do blog! Naão percam!>
-        <a href="index.html">Ir para a página home</a>
+    <h2>Post numero 1!</h2>
+    <h2>Poist numero 2!</h2>
+    <a href="index.html">Ir para a página home</a>
 </body>
 
 </html>
