--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
     <h1>Página home</h1>
+    <h1>Como conseguir o melhor produto?</h1>
     <a href="vendas.html">Ir para a página de vendas</a>
 </body>
 
