--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>Página home</h1>
     <h1>Como conseguir o melhor produto?</h1>
     <a href="vendas.html">Ir para a página de vendas</a>
+    < href="sobre.html" Veja mais sobre nosso site aqui</a>
 </body>
 
 </html>
