Simulando conflito merge vendas.html

--- a/vendas.html
+++ b/vendas.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Página de vendas</h1>
-    <p>Vendas = R%5000.00</p>
+    <p>Vendas = R%6000.00</p> //simulando um conflito de merge
     <p>Mais sobre vendas!</p>
     <a href="index.html">Ir para a página home</a>
 </body>
